--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,27 @@
-spring.application.name=Spring Boot Template App
+## Hibernate
+spring.datasource.url=jdbc:mariadb://108.61.180.101:3306/db_live?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+#spring.datasource.url=jdbc:mariadb://171.241.54.69:33306/db_live?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+#spring.datasource.url=jdbc:mariadb://localhost:3306/db_news?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=123456aA@
+#spring.jpa.properties.hibernate.jdbc.batch_size=40
+#spring.jpa.properties.hibernate.order_inserts=true
+#spring.jpa.properties.hibernate.order_updates=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
-server.port=9080
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
-spring.datasource.driver-class-name=org.postgresql.Driver
+# compression
+server.compression.enabled=true
+server.compression.min-response-size=1024
 
-# Uncomment to see generated queries to DB in logs
-#spring.jpa.show-sql=true
+# redis
+#spring.cache.type=redis
+#spring.redis.host=171.241.117.90
+#spring.redis.port=6379
+#spring.cache.redis.key-prefix=RestaurantAPI
+#spring.cache.redis.time-to-live=3500000
+server.port=6868
